# MarbleQml

./: CMakeLists.txt  Main.qml  main.cpp
aboutComponent/: LayerAbout.qml
layerComponent/: ButtonItem.qml  LayerItems.qml  LayerMap.qml  StartItem.qml  utils.js
toolsComponent/: IconButtonItem.qml  ToolsItem.qml
